--- a/FireFox/manifest.json
+++ b/FireFox/manifest.json
@@ -6,7 +6,7 @@
   
   "browser_specific_settings": {
     "gecko": {
-      "update_url": "https://example.com/updates.json",
+      "update_url": "https://raw.githubusercontent.com/RpSide/Yt-Unb10ck3r/main/FireFox/manifest.json",
       "id": "YtUnb10ck3r@replacord.com",
       "strict_min_version": "57.0"
     }
